Fix scroll momentum on ios.

--- a/sulo-style/scss/base.scss
+++ b/sulo-style/scss/base.scss
@@ -3,6 +3,8 @@ $navbar-height: rem-calc(56);
 html, body {
 	min-height: 100%;
 	width: 100%;
+	overflow-y: scroll; /* has to be scroll, not auto */
+  	-webkit-overflow-scrolling: touch;
 }
 
 .reveal-overlay {
